Fixes reopened MDL-7493 "Make sure standard themes are visible under "Windows High Contrast Black" mode" - foreground show/hide block icon/ALT text switched with Javscript.

--- a/theme/standard/styles_layout.css
+++ b/theme/standard/styles_layout.css
@@ -1184,11 +1184,8 @@ a.skip:focus, a.skip:active {
   padding:0;
 }
 
-.sideblock .header .hide-show {
+.sideblock .header .hide-show-image {
   float:right;
-}
-
-.sideblock .header .hide-show img.hide-show-image {
   height:11px;
   width:11px;
   margin-top:0.25em;
