Fixes reopened MDL-7493... - foreground show/hide block icon/ALT text switched with Javscript. Merged.

--- a/theme/standard/styles_layout.css
+++ b/theme/standard/styles_layout.css
@@ -1124,11 +1124,8 @@ a.skip-block:focus, a.skip-block:active {
   padding:0;
 }
 
-.sideblock .header .hide-show {
+.sideblock .header .hide-show-image {
   float:right;
-}
-
-.sideblock .header .hide-show img.hide-show-image {
   height:11px;
   width:11px;
   margin-top:0.25em;
