--- a/theme/standard/styles_layout.css
+++ b/theme/standard/styles_layout.css
@@ -1071,6 +1071,9 @@ body#admin-modules table.generaltable td.c0
   margin-left: 0.5em;
 }
 
+#adminsettings .form-htmlarea {
+  width:  640px;
+}
 
 .environmentbox {
   margin-top: 1em;
