MDL-12656 indicate when current value is incorrect and propose default instead in admin settings

--- a/theme/standard/styles_color.css
+++ b/theme/standard/styles_color.css
@@ -339,7 +339,11 @@ table.flexible .r1 {
 }
 
 #adminsettings .form-overridden {
-    background-color: #fbb;
+    background-color: #ff6;
+}
+
+#adminsettings .form-warning {
+    background-color: #f88;
 }
 
 #adminsettings .form-item .defaultinfo {
